# fc-solve

./: .gitignore  .travis.yml  appveyor.yml
fc-solve/benchmarks/: log.txt  shlomif-acer-laptop-log.txt
fc-solve/presets/soft-threads/meta-moves/auto-gen/: scans.txt
fc-solve/scripts/: multi_config_tests.pl
fc-solve/scripts/TEST_OPTIMIZATIONS/: cm-mod1.sh
fc-solve/site/wml/src/js/: web-fc-solve-ui.js
fc-solve/source/: AUTHORS  CMakeLists.txt  Common.cmake  DONE.txt  HACKING.txt  Makefile.am  Makefile.gnu  Makefile.tcc  README.win32.txt  Reproduce-Hang.bash  TODO  Tatzer  USAGE.txt  acconfig.h  caas.c  check_and_add_state.c  check_and_add_state.h  cmd_line.c  config.h.cmake  config.h.in  dbm_calc_derived.h  dbm_calc_derived_test.c  dbm_procs.h  dbm_solver.c  delta_states_any.h  delta_states_debondt_impl.h  depth_multi_queue.h  fc_pro_iface.c  fcc_brfs.h  fcs.h  fcs_base64.h  fcs_dllexport.h  fcs_enums.h  fcs_hash.c  fcs_hash.h  fcs_isa.c  fcs_user.h  freecell-solver.spec.in  freecell.c  freecell.h  (+27 more)
fc-solve/source/Presets/: CMakeLists.txt
fc-solve/source/Presets/presets/: CMakeLists.txt
fc-solve/source/board_gen/: CMakeLists.txt  pi_make_microsoft_freecell_board.c
fc-solve/source/libavl/: rb.c
fc-solve/source/man/: CMakeLists.txt
fc-solve/source/scripts/: convert-to-fcs_move_stack_push_params.rb  gen-cmd-line-radix-tree.pl  gen_is_parent_lookup_c.pl  keyval3.pl  measure-depth-dep-invocation-1.bash
fc-solve/source/sys/: tree.h
fc-solve/source/t/: debondt-delta-states-test.c
fc-solve/source/t/lib/FC_Solve/Test/Verify/: Data.pm
fc-solve/source/t/t/: compare-digests-and-lens.t  hard-disk-offloading-queue.t  unit-col-transfer-cards.t
fc-solve/source/t/t/data/: digests-and-lens-storage.yml
source/: AUTHORS.xml  CMakeLists.txt  USAGE.xml
